<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/plus_zoom_button"
        app:layout_constraintBottom_toTopOf="@id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/plus"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/minus_zoom_button"
        app:layout_constraintBottom_toTopOf="@id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/minus"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/location_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/location"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/data_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/data_base"
        app:layout_constraintTop_toBottomOf="@id/cardTraffic"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_db"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardTraffic"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="20dp"

        android:foreground="@color/grey"
        app:cardCornerRadius="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/probkibtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="-10dp"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="-10dp"
            android:layout_marginBottom="-10dp"

            android:contentDescription="@string/on_or_off_traffic_button" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>